# flights-tracker

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/: flights-tracker-cli
.claude/skills/flights-tracker-cli/: SKILL.md
.claude/skills/flights-tracker-cli/agents/: openai.yaml
docs/: README.md  architecture.md  cli-contract.md  endpoints.md  private-web-api.md  reconnaissance.md  testing-and-compliance.md  user-preferences.md
docs/adr/: 0001-agent-owns-travel-intent.md  0002-serialize-provider-workflows.md
src/flights_tracker/: __init__.py  cli.py  coordination.py  errors.py  provider.py  service.py
tests/: conftest.py  test_coordination.py  test_explore.py  test_provider.py  test_service.py
tests/fixtures/: explore_country.json  explore_everywhere.json  live_pricing_options.json
