[project]
name = "flights-tracker"
version = "0.1.0"
description = "Agent-friendly CLI for live flight search via Skyscanner's public web backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["httpx>=0.28.1,<1"]

[project.scripts]
flights = "flights_tracker.cli:main"

[dependency-groups]
dev = ["pytest>=8.4", "pytest-asyncio>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flights_tracker"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
